# kociemba

./: README.md  README.rst  pyproject.toml
kociemba/: coord.py  moves.py  pruning.py  symmetries.py
kociemba/tables/: co_classidx  co_rep  co_sym  conj_twist  conj_ud_edges  fs_classidx  fs_sym  move_corners  move_flip  move_slice_sorted  move_twist  move_u_edges  move_ud_edges  phase2_cornsliceprun  phase2_edgemerge
